--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     padding: 0px;
     margin: 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
